# RoboMaster-SaltWave-ROS

./: .clang-format  .flake8  .gitignore  README.md  build.sh  test.sh  哨兵机器人导航项目技术设计文档-TDD.md
.github/workflows/: ci.yml
docs/: CLEANUP_SUMMARY.md  architecture.md
scripts/: install_deps.sh
src/decision_making/: CMakeLists.txt  package.xml
src/decision_making/behavior_trees/: tactical.xml
src/decision_making/include/decision_making/: async_action_nodes.hpp  bt_nodes.hpp
src/decision_making/launch/: decision_launch.py
src/decision_making/src/: async_action_nodes.cpp  bt_nodes.cpp  decision_node.cpp
src/sensor_fusion/: CMakeLists.txt  package.xml
src/sensor_fusion/config/: ekf_params.yaml  sensor_fusion_params.yaml
src/sensor_fusion/include/sensor_fusion/: fusion_node.hpp  graph_optimizer.hpp  imu_prefilter.hpp  lidar_module.hpp  multi_rate_ekf.hpp  multi_rate_ekf_2d.hpp  vision_module.hpp
src/sensor_fusion/launch/: fusion_launch.py  sensor_fusion.launch.py
src/sensor_fusion/src/: ekf_fusion_ref.cpp  fusion_node.cpp  graph_optimizer.cpp  imu_prefilter.cpp  lidar_module.cpp  multi_rate_ekf.cpp  multi_rate_ekf_2d.cpp  sensor_fusion_node.cpp  vision_module.cpp
src/sentinel_aiming/: CMakeLists.txt  package.xml
src/sentinel_aiming/ballistics/config/: ballistics_params.yaml
src/sentinel_aiming/ballistics/launch/: ballistics.launch.py
src/sentinel_aiming/config/: aiming.yaml
src/sentinel_aiming/detector/config/: detector_params.yaml
src/sentinel_aiming/detector/launch/: detector.launch.py
src/sentinel_aiming/launch/: aiming.launch.py
src/sentinel_aiming/servo_controller/config/: servo_params.yaml
src/sentinel_aiming/servo_controller/launch/: servo_controller.launch.py
src/sentinel_aiming/src/ballistics/: ballistics_node.cpp
src/sentinel_aiming/src/detector/: yolov8_detector_node.cpp
src/sentinel_aiming/src/servo_controller/: servo_controller_node.cpp
src/sentinel_aiming/src/tracker/: bytetrack_node.cpp
src/sentinel_aiming/tracker/config/: tracker_params.yaml
src/sentinel_aiming/tracker/launch/: tracker.launch.py
src/sentinel_bringup/: CMakeLists.txt  package.xml
src/sentinel_bringup/config/: fastlio_mid360_calibration.yaml  nav2_params.yaml  pointcloud_to_laserscan.yaml  sentinel_navigation.yaml  teb_mecanum_params.yaml
src/sentinel_bringup/launch/: bringup.launch.py  bringup_all.launch.py  bringup_launch.py  nav_only.launch.py  navigation_launch.py  slam.launch.py
src/sentinel_bringup/maps/: empty_rm_field.pgm  empty_rm_field.yaml
src/sentinel_bringup/rviz/: sentinel_nav.rviz
src/sentinel_decision/: CMakeLists.txt  package.xml
src/sentinel_decision/behavior_trees/: sentry_navigation.xml
src/sentinel_decision/bt_nodes/: ActionActivateAiming.cpp  ActionActivateAiming.hpp  ActionNavigate.cpp  ActionNavigate.hpp  ActionSetMode.cpp  ActionSetMode.hpp  ConditionTargetVisible.cpp  ConditionTargetVisible.hpp
src/sentinel_decision/config/: decision_params.yaml
src/sentinel_decision/launch/: bringup_decision.launch.py
src/sentinel_decision/src/state_manager/: state_manager_node.cpp
src/sentinel_decision/state_manager/launch/: state_manager.launch.py
src/sentinel_description/: CMakeLists.txt  package.xml
src/sentinel_description/launch/: description.launch.py
src/sentinel_description/urdf/: sentinel.urdf.xacro
src/sentinel_ekf_fusion/: CMakeLists.txt  package.xml
src/sentinel_ekf_fusion/config/: ekf.yaml
src/sentinel_ekf_fusion/launch/: ekf_fusion.launch.py
src/sentinel_ekf_fusion/src/: ekf_fusion_node.cpp
src/sentinel_fast_lio/: CMakeLists.txt  package.xml
src/sentinel_fast_lio/config/: fast_lio_config.yaml
src/sentinel_fast_lio/launch/: fast_lio.launch.py
src/sentinel_fusion/: CMakeLists.txt  package.xml
src/sentinel_fusion/config/: graph_optimizer_params.yaml  point_lio_wrapper_params.yaml
src/sentinel_fusion/graph_optimizer/launch/: graph_optimizer.launch.py
src/sentinel_fusion/imu_prefilter/config/: imu_prefilter_params.yaml
src/sentinel_fusion/imu_prefilter/launch/: imu_prefilter.launch.py
src/sentinel_fusion/launch/: fusion.launch.py
src/sentinel_fusion/lidar_ekf/launch/: lidar_ekf.launch.py
src/sentinel_fusion/src/graph_optimizer/: graph_optimizer_node.cpp
src/sentinel_fusion/src/imu_prefilter/: imu_prefilter_node.cpp
src/sentinel_fusion/src/lidar_ekf/: point_lio_wrapper_node.cpp
src/sentinel_fusion/src/vision_ekf/: vision_ekf_node.cpp
src/sentinel_fusion/vision_ekf/config/: vision_ekf_params.yaml
src/sentinel_fusion/vision_ekf/launch/: vision_ekf.launch.py
src/sentinel_msgs/: CMakeLists.txt  package.xml
src/sentinel_msgs/msg/: AimTarget.msg  ArmorTarget.msg  DetectedObject.msg  FusionStatus.msg  RobotState.msg  SentinelMode.msg  TacticalGoal.msg  TrackedTarget.msg  Waypoint.msg  WaypointArray.msg
src/sentinel_msgs/srv/: SetMode.srv
src/sentinel_navigation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/sentinel_navigation/config/: cbf_params.yaml  patrol_waypoints.yaml
src/sentinel_navigation/launch/: cbf_launch.py  (+2 more)
src/sentinel_point_lio/: CMakeLists.txt  package.xml
src/sentinel_point_lio/config/: point_lio_config.yaml
src/sentinel_point_lio/launch/: point_lio.launch.py
src/sentinel_relocalization/: CMakeLists.txt  package.xml
src/sentinel_relocalization/config/: small_gicp_config.yaml
src/sentinel_relocalization/launch/: relocalization.launch.py
src/sentinel_relocalization/src/: small_gicp_reloc_node.cpp
src/sentinel_terrain_analysis/: CMakeLists.txt  package.xml
src/sentinel_terrain_analysis/config/: terrain_config.yaml
src/sentinel_terrain_analysis/launch/: terrain_analysis.launch.py
src/sentinel_terrain_analysis/src/: terrain_analysis_node.cpp
src/vision_aiming/: CMakeLists.txt  package.xml  setup.py
src/vision_aiming/config/: aiming_params.yaml
src/vision_aiming/launch/: aiming_pipeline_launch.py
src/vision_aiming/resource/: vision_aiming
src/vision_aiming/vision_aiming/: __init__.py  ballistics_node.py  ballistics_predictor.py  detector_node.py  servo_controller_node.py  tracker_node.py  yolo_postprocessor.py
(+11 files in other folders)
