<?xml version="1.0"?>
<package format="3">
  <name>sensor_fusion</name>
  <version>0.1.0</version>
  <description>Multi-rate EKF sensor fusion for Mid360 LiDAR and IM1R IMU</description>
  <maintainer email="pyy00707@163.com">pyy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>Eigen3</depend>
  <depend>OpenCV</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
