<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sentinel_bringup</name>
  <version>0.1.0</version>
  <description>哨兵机器人导航启动配置包</description>
  <maintainer email="pyy00707@163.com">pyy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sentinel_description</exec_depend>
  <exec_depend>sentinel_navigation</exec_depend>
  <exec_depend>sentinel_point_lio</exec_depend>
  <exec_depend>sentinel_relocalization</exec_depend>
  <exec_depend>sentinel_terrain_analysis</exec_depend>
  <exec_depend>sentinel_ekf_fusion</exec_depend>
  <exec_depend>sentinel_fusion</exec_depend>
  <exec_depend>sentinel_decision</exec_depend>
  <exec_depend>sentinel_aiming</exec_depend>
  <exec_depend>sensor_fusion</exec_depend>
  <exec_depend>vision_aiming</exec_depend>
  <exec_depend>decision_making</exec_depend>
  <exec_depend>ompl</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_recoveries</exec_depend>
  <exec_depend>nav2_smoother</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
