<?xml version="1.0"?>
<package format="3">
  <name>sentinel_decision</name>
  <version>0.1.0</version>
  <description>Behavior tree decision layer for sentinel robot</description>
  <maintainer email="pyy00707@163.com">pyy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sentinel_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
