<?xml version="1.0"?>
<package format="3">
  <name>sentinel_terrain_analysis</name>
  <version>0.0.0</version>
  <description>哨兵机器人地形分析模块 - 用于地形分割和障碍物识别</description>
  <maintainer email="pyy00707@163.com">pyy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libboost-dev</build_depend>
  <build_depend>libopencv-dev</build_depend>

  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>libboost-all</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
